--- a/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/Views/Home/Index.cshtml
+++ b/BackEnd/ITI.LinkedIn/ITI.LinkedIn.Web/Views/Home/Index.cshtml
@@ -2,3 +2,264 @@
     ViewBag.Title = "Home Page";
 }
 
+<!-- Profile Header Section -->
+<section class="p-3" id="ProfileSummary">
+    <div class="container u-border">
+        <div class="row">
+            <!-- upper div that includes img -->
+            <div class="col-sm-12 profile-imgs">
+                <!--profile img -->
+                <div class="position-absolute profile-img">
+                    <img src="Assets/images/ProfilePic.jpg" class="rounded-circle">
+                </div>
+            </div>
+            <!-- down div -->
+            <div class="col-sm-12">
+                <!-- upper section -->
+                <div class="row pt-sm-3 pb-sm-3">
+                    <div class="col-sm-6 offset-6 dropdown">
+                        <div class="d-flex justify-content-end align-items-center edit-profile">
+                            <div class="p-2">
+                                <a role="button" href="#" class="dropdown-toggle btn-primary btn-lg add-section"
+                                   id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Add Profile Section <!-- <i class="fas fa-sort-down"></i> -->
+                                </a>
+                                <!-- Add Profile Section Modal -->
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <!-- Add Profile Section form -->
+                                    <form class="accordion list " id="accordionExample">
+                                        <!-- intro card -->
+                                        <div class="card">
+                                            <div class="card-header" id="headingOne">
+                                                @*<h2 class="mb-0">*@
+                                                <div data-toggle="collapse"
+                                                     data-target="#collapseOne"
+                                                     aria-expanded="true" aria-controls="collapseOne">
+                                                    <a class="btn btn-link collapsed text-reset"
+                                                       href="#" type='button'>
+                                                        <span class="card-title"> Intro</span>
+                                                    </a>
+                                                </div>
+                                                @*</h2>*@
+                                            </div>
+                                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                                 data-parent="#accordionExample">
+                                                <div class="card-body">
+                                                    <div>
+                                                        <p class="font-weight-normal">
+                                                            Help the right people find you by showing what opportunities
+                                                            you’re open to.
+                                                        </p>
+                                                    </div>
+                                                    <div style='display:flex; align-items:center; font-size:2rem;'>
+                                                        <i class="fab fa-stumbleupon-circle p-2"></i>
+                                                        <p class="p-2 font-weight-light">
+                                                            Looking for job opportunities Show recruiters and others
+                                                            you’re open to job opportunities.
+                                                        </p>
+                                                        <a> <i class="far fa-plus-square p-2"></i></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- About card -->
+                                        <div class="card">
+                                            <div class="card-header d-flex justify-content-between " id="headingTwo">
+                                                <!-- <h2 class="mb-0 justify-content-between "> -->
+                                                <div class="p-2">
+                                                    <a class="btn btn-link collapsed text-reset" href="#" type="button" data-toggle="collapse"
+                                                       data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                        About
+                                                    </a>
+                                                </div>
+                                                <div class="p-2" style="margin: auto 0;">
+                                                    <i class="fas fa-chevron-down "></i>
+                                                </div>
+                                                <!-- </h2> -->
+                                            </div>
+                                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                                                 data-parent="#accordionExample">
+                                                <div class="card-body">
+
+                                                    <div style='display:flex; align-items:center; font-size:2rem;'>
+                                                        <i class="fas fa-indent"></i>
+                                                        <div class="d-block">
+                                                            <p>Education</p>
+                                                            <p class="font-weight-lighter p-0 m-0">
+                                                                Use summary to share what you do or the opportunities you’re looking for.
+                                                            </p>
+                                                        </div>
+                                                        <a> <i class="far fa-plus-square p-2"></i></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- Background card -->
+                                       @Html.Partial("_BackgroundCard")
+                                        <!-- skills card -->
+                                        <div class="card">
+                                            <div class="card-header d-flex justify-content-between " id="headingFour">
+                                                <!-- <h2 class="mb-0 justify-content-between "> -->
+                                                <div class="p-2">
+                                                    <a class="btn btn-link collapsed text-reset" href="#" type="button" data-toggle="collapse"
+                                                       data-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
+                                                        Skills
+                                                    </a>
+                                                </div>
+                                                <div class="p-2" style="margin: auto 0;">
+                                                    <i class="fas fa-chevron-down "></i>
+                                                </div>
+                                                <!-- </h2> -->
+                                            </div>
+                                            <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
+                                                 data-parent="#accordionExample">
+                                                <div class="card-body">
+
+                                                    <div style="display:flex; justify-content:space-between; align-items:center; font-size:2rem;">
+                                                        <i class="fas fa-medal"></i>
+                                                        <div class="d-block">
+                                                            <p class="font-weight-bold">Slills</p>
+                                                            <p class="font-weight-lighter p-0 m-0">
+                                                                11 skills on your profile.
+                                                            </p>
+                                                        </div>
+                                                        <div class="p-2" style="margin: auto 0;">
+                                                            <i class="far fa-plus-square"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- accomplishment -->
+                                        <div class="card">
+                                            <div class="card-header d-flex justify-content-between " id="headingFive">
+                                                <!-- <h2 class="mb-0 justify-content-between "> -->
+                                                <div class="p-2">
+                                                    <a class="btn btn-link collapsed text-reset" href="#" type="button" data-toggle="collapse"
+                                                       data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                                        Acccomplishment
+                                                    </a>
+                                                </div>
+                                                <div class="p-2" style="margin: auto 0;">
+                                                    <i class="fas fa-chevron-down "></i>
+                                                </div>
+                                                <!-- </h2> -->
+                                            </div>
+                                            <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
+                                                 data-parent="#accordionExample">
+                                                <div class="card-body">
+                                                    <p class="font-weight-bold">Additional Information</p>
+                                                    <div style="display:flex; justify-content:space-between; align-items:center; font-size:2rem;">
+                                                        <i class="fas fa-medal"></i>
+                                                        <div class="d-block">
+                                                            <p>Request & Recommendation</p>
+                                                            <p class="font-weight-lighter p-0 m-0">
+                                                                Ask your connections to write you a recommendation.
+                                                            </p>
+                                                        </div>
+                                                        <div class="p-2" style="margin: auto 0;">
+                                                            <i class="far fa-plus-square"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- Supported language -->
+                                        <div class="card">
+                                            <div class="card-header d-flex justify-content-between " id="headingSix">
+                                                <!-- <h2 class="mb-0 justify-content-between "> -->
+                                                <div class="p-2">
+                                                    <a class="btn btn-link collapsed text-reset" href="#" type="button" data-toggle="collapse"
+                                                       data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                                        Supported & Language
+                                                    </a>
+                                                </div>
+                                                <div class="p-2" style="margin: auto 0;">
+                                                    <i class="fas fa-chevron-down "></i>
+                                                </div>
+                                                <!-- </h2> -->
+                                            </div>
+                                            <div id="collapseSix" class="collapse" aria-labelledby="headingSix"
+                                                 data-parent="#accordionExample">
+                                                <div class="card-body">
+
+                                                    <div style="display:flex; justify-content:space-between; align-items:center; font-size:2rem;">
+                                                        <i class="fas fa-globe"></i>
+                                                        <div class="d-block">
+                                                            <p>Add profile IN another language</p>
+                                                            <p class="font-weight-lighter p-0 m-0">
+                                                                You can add the above sections in other languages to make it easier for people to find
+                                                                you.
+                                                            </p>
+                                                        </div>
+                                                        <div class="p-2" style="margin: auto 0;">
+                                                            <i class="far fa-plus-square"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+
+                            </div>
+                            <div class="dropdown p-2">
+                                <a class="btn border border-dark btn-light" id="dropdownMenu2" data-toggle="dropdown"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    More....
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                    <a class="dropdown-item">
+                                        <i class="fas fa-share p-2"></i>Share Profile vs
+                                        Message
+                                    </a>
+                                    <a class="dropdown-item"> <i class="fas fa-share p-2"></i>Save as PDF</a>
+                                </div>
+                            </div>
+                            <div class="p-2">
+                                <a href="#"><i class="fas fa-pencil-alt"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- down section  -->
+                <div class="row p-3">
+                    <div class="col-sm-6 user-info">
+                        <div class="p-sm-3">
+                            <div>
+                                <h2 class="d-inline-block">Nora </h2>
+                                <h2 class="d-inline-block"> Mohamed</h2>
+                            </div>
+                            <div>
+                                <h4> ITI Intake 40</h4>
+                            </div>
+                            <div class="d-flex">
+                                <h4>Egypt </h4>
+                                <ul class="info">
+                                    <!-- Button trigger modal -->
+                                    <li id="connection"><a href="#" class="btn btn-link"> 500+ Connections </a></li>
+                                    <li id="contact">
+                                        <a href="#" type="button" class="btn btn-link" data-toggle="modal" data-target="#Connection">
+                                            Contact info
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 p-sm-3 experiences">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <div class="sm-img"><img class="img-fluid" src="Assets/images/itiLogo.png"> </div>
+                            <div> <a href="#" class="btn btn-link"> Information Technology Instutute ITI </a></div>
+                        </div>
+                        <div class="d-flex justify-content-end align-items-center">
+                            <div class="sm-img"><img class="img-fluid" src="Assets/images/itiLogo.png"> </div>
+                            <div> <a href="#" class="btn btn-link"> Information Technology Instutute ITI </a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
